--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,13 @@
 </head>
 <body>
   
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+  <%= render "layout/navigation" %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+  <div class="container-fluid">
+    <%= yield %>
+  </div>
 
-<%= yield %>
 
 </body>
 </html>
