update posts controller and model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-  <%= render "layout/navigation" %>
+  <%= render "layouts/navigation" %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <div class="container-fluid">
